<resources>
    <string name="app_name">To Com Fome</string>
    <string name="faca_seu_login">Faça seu login</string>
    <string name="telaInicial_usuario">Usuário</string>
    <string name="telaInicial_insira_usuario">Usuário da empresa</string>
    <string name="telaInicial_senha">Senha</string>
    <string name="telaInicial_insira_senha">Senha</string>
    <string name="telaInicial_entrar">Entrar</string>
    <string name="telainicial_cadastrar">Cadastrar</string>
    <string name="telainicial_sair">Sair</string>
    <string name="telaInicial_texto_inicial">Tô Com Fome</string>
    <string name="telaRegistro_texto_inicial">Cadastro</string>
    <string name="telaRegistro_texto_botao">Cadastrar</string>
    <string name="telaRegistro_texto_botaoVoltar">Entrar no app</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configurações</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="bem_vindo">Bem vindo</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_estoque">EstoqueActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_drawer_estoque">Estoque</string>
    <string name="title_activity_pedidos">PedidosActivity</string>
    <string name="nav_drawer_pedidos">Pedidos</string>
    <string name="main_activity_sair">Sair</string>
    <string name="texto_apis_relatorios">Os dados de relatórios serão recebidos por API (Atualmente apenas estoque funcional)</string>
    <string name="texto_apis_pedidos">Os dados de pedidos serão recebidos por API (Atualmente apenas estoque funcional)</string>
    <string name="texto_apis_estoque">Os dados de estoque serão informados conforme sendo recebidos por API</string>
    <string name="texto_relogio_desc">A linha de produto Montblanc 1858 é inspirada nos lendários relógios profissionais Minerva dos anos 1920 e 1930, concebidos para a utilização e exploração militar</string>
    <string name="texto_relogio_nome_1">Relógio MontBlanc</string>
    <string name="texto_relogio_nome_2">Relógio Casio</string>
    <string name="texto_relogio_nome_3">Relógio Condor</string>
    <string name="texto_relogio_nome_4">Relógio Technos</string>
    <string name="texto_tenis_nome_1">Air Force 1</string>
    <string name="texto_tenis_nome_2">Air Max Fusion</string>
    <string name="texto_tenis_nome_3">Air Max 95</string>
    <string name="texto_tenis_nome_4">Air Max 97</string>
    <string name="texto_tenis_desc">O Air Force 1 Mid 07 é tudo aquilo que você conhece bem: sobreposições impecáveis, detalhes ousados e a quantidade perfeita de brilho para que você se destaque. A boca almofadada de corte médio com fecho aderente clássico adiciona o conforto clássico do basquete, enquanto as perfurações na ponta mantêm o frescor</string>
    <string name="model_type_detail_button_text">Detalhes</string>


</resources>