<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/purple_ps"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/acivStockImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/relogio_icon_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/acivStockImage"
            app:layout_constraintEnd_toEndOf="@id/acivStockImage"
            app:layout_constraintStart_toStartOf="@id/acivStockImage"
            app:layout_constraintBottom_toBottomOf="@id/acivStockImage"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tvStockTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:text="@string/action_config"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvStockAmount"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/acivStockImage"
            app:layout_constraintTop_toTopOf="@+id/acivStockImage" />

        <TextView
            android:id="@+id/tvStockAmount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:text="01"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStockTitle"
            app:layout_constraintTop_toTopOf="@+id/acivStockImage" />

        <TextView
            android:id="@+id/tvStockDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:text="@string/texto_apis_estoque"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/acivStockImage"
            app:layout_constraintTop_toBottomOf="@+id/tvStockTitle" />

        <Button
            android:id="@+id/btnDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/model_type_detail_button_text"
            android:textColor="@color/purple_ps"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvStockDescription"
            app:layout_constraintStart_toStartOf="@id/tvStockDescription"
            app:layout_constraintTop_toBottomOf="@id/tvStockDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>